just getting started

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,24 @@
-<h1>  HI</h1>
+<!DOCTYPE html>
+<html>
+<h1 title="EOU Coronavirus Tracker">EOU Coronavirus Tracker</h1><br>
+<body style="background-color:powderblue;">
+
+
+<h3>Welcome to the EOU Coronavirus Tracker! This application tracks the location of individuals and can tell you
+your probabality of infection from the locations you've visited in La Grande</h3>
+
+<br>
+<h2>Login:</h2>
+
+<form action="/action_page.php>
+  <label for="fname">User Name:</label><br>
+  <input type="text" id="userName" name="UserName"><br>
+  <label for="lname">Password:</label><br>
+  <input type="text" id="pWord" name="pWord"><br>
+    <input type="submit" value="Submit">
+</form>
+
+<a href="create_account.html">Create an Account</a>
+
+</body>
+</html>
