made some changes.

--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -3,10 +3,10 @@ https://flask.palletsprojects.com/en/2.0.x/tutorial/templates/
 © Copyright 2010 Pallets -->
 
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - EOU CORONAVIRUS TRACKER</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1>Flaskr</h1>
+  <h1>EOU CORONAVIRUS TRACKER</h1>
   <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
