--- a/flaskr/templates/test_user_index/index.html
+++ b/flaskr/templates/test_user_index/index.html
@@ -1,5 +1,16 @@
+{% extends 'base.html' %}
+
+{% block header %}
+  <h1>{% block title %}USER MENU{% endblock %}</h1>
+
+{% endblock %}
+
+{% block content %}
+
 <h1>login success</h1>
 
 {% if g.user %}
-    <h2>['username']</h2>
+    <h2>HELLO</h2>
   {% endif %}
+
+{% endblock %}
