--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -9,7 +9,7 @@ https://flask.palletsprojects.com/en/2.0.x/tutorial/templates/
   <h1>EOU CORONAVIRUS TRACKER</h1>
   <ul>
     {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
+      <li><span>{{ g.user['userName'] }}</span>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.register') }}">Register</a>
