--- a/flaskr/templates/auth/home.html
+++ b/flaskr/templates/auth/home.html
@@ -5,6 +5,13 @@
 {% endblock %}
 
 {% block content %}
-<h2>put some home pageness here</h2>
+<body>
+<br><br>
+<h4>The Eastern Oregon University Corona Virus Tracker gets user location data
+from locations across La Grande.  We use the data to perform a contact tracing application
+that will be able to tell your probability of infection.</h4><br><br>
+<h4>Created by the Green Team</h4>
 
+
+</body>
 {% endblock %}
