--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -6,10 +6,18 @@
 
 {% block content %}
   <form method="post">
+    <label for="firstName">First Name</label>
+    <input name="firstName" id="firstName" required>
+
+    <label for="lastName">Last Name</label>
+    <input name="lastName" id="lastName" required>
+
     <label for="username">Username</label>
     <input name="username" id="username" required>
+
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
+
     <input type="submit" value="Register">
   </form>
 {% endblock %}
