--- a/flaskr/templates/test_user_index/index.html
+++ b/flaskr/templates/test_user_index/index.html
@@ -9,7 +9,7 @@
 
 
 {% if g.user %}
-    <h2>HELLO {{ g.user['userName'] }}</h2>
+    <h2>Hello {{ g.user['userName'] }}</h2>
   {% endif %}
 
 {% endblock %}
