making the changes

--- a/flaskr/templates/finalReport/changesSaved.html
+++ b/flaskr/templates/finalReport/changesSaved.html
@@ -8,7 +8,8 @@
 {% block content %}
 
     {% if g.user %}
-    <h2>Here is your report {{ g.user['firstName'] }}</h2>
+    <h2>Administrator</h2>
+    <h2>Your changes have been saved, {{ g.user['firstName'] }}!</h2>
 
     <h2></h2>
 
