--- a/flaskr/templates/finalReport/graph.html
+++ b/flaskr/templates/finalReport/graph.html
@@ -8,9 +8,11 @@
 {% block content %}
 
     {% if g.user %}
-    <h2>Here is your report {{ g.user['firstName'] }}</h2>
+    <h2>This graph shows ... {{ g.user['firstName'] }}</h2>
 
-    <h2></h2>
+    <img src="./exampleGraph.png" alt="graph">
+
+    <h2>Your probability of infection is  %</h2>
 
     {% endif %}
 
