fixed change infecteduser function

--- a/flaskr/templates/auth/home.html
+++ b/flaskr/templates/auth/home.html
@@ -6,11 +6,14 @@
 
 {% block content %}
 <body>
-<br><br>
-<h4>The Eastern Oregon University Corona Virus Tracker gets user location data
+<br>
+<br>
+<h4 style="color:#E9F7DE;"> The Eastern Oregon University Corona Virus Tracker gets user location data
 from locations across La Grande.  We use the data to perform a contact tracing application
-that will be able to tell your probability of infection.</h4><br><br>
-<h4>Created by the Green Team</h4>
+that will be able to tell your probability of infection.
+</h4>
+<br><br>
+<h4 style="color: #04E08F;"> Created by the Green Team</h4>
 
 
 </body>
