--- a/flaskr/templates/auth/register.html
+++ b/flaskr/templates/auth/register.html
@@ -6,16 +6,16 @@
 
 {% block content %}
   <form method="post">
-    <label for="firstName">First Name</label>
+    <label for="firstName" style="color:#E9F7DE;">First Name</label>
     <input name="firstName" id="firstName" required>
 
-    <label for="lastName">Last Name</label>
+    <label for="lastName" style="color:#E9F7DE;">Last Name</label>
     <input name="lastName" id="lastName" required>
 
-    <label for="username">Username</label>
+    <label for="username" style="color:#E9F7DE;">Username</label>
     <input name="username" id="username" required>
 
-    <label for="password">Password</label>
+    <label for="password" style="color:#E9F7DE;">Password</label>
     <input type="password" name="password" id="password" required>
 
     <input type="submit" value="Register">
