--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -7,9 +7,9 @@ https://flask.palletsprojects.com/en/2.0.x/tutorial/templates/
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
   <h1>EOU CORONAVIRUS TRACKER</h1>
-  <ul>
+  <ul style="color:#E9F7DE;">
     {% if g.user %}
-      <li><span>{{ g.user['userName'] }}</span>
+      <li style="color:#E9F7DE;"><span>{{ g.user['userName'] }}</span>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
     {% else %}
       <li><a href="{{ url_for('auth.login') }}">Log In</a>
