--- a/flaskr/templates/auth/home.html
+++ b/flaskr/templates/auth/home.html
@@ -8,7 +8,7 @@
 <body>
 <br>
 <br>
-<h4 style="color:#E9F7DE;"> The Eastern Oregon University Corona Virus Tracker gets user location data
+<h4 > The Eastern Oregon University Corona Virus Tracker gets user location data
 from locations across La Grande.  We use the data to perform a contact tracing application
 that will be able to tell your probability of infection.
 </h4>
