--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -6,9 +6,9 @@
 
 {% block content %}
   <form method="post">
-    <label for="username" style="color:#E9F7DE;">Username</label>
+    <label for="username" >Username</label>
     <input name="username" id="username" required>
-    <label for="password" style="color:#E9F7DE;">Password</label>
+    <label for="password" >Password</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Log In">
   </form>
