--- a/flaskr/templates/test_user_index/nonAdmin_index.html
+++ b/flaskr/templates/test_user_index/nonAdmin_index.html
@@ -13,7 +13,7 @@
 
     <h4>Please enter the location that you where at today and what time you where at that location:</h4>
 
-    <form method="post" style="color:#E9F7DE;">
+    <form method="post">
 
         Location: <SELECT name ="location">
         {% for loc in locationList %}
