--- a/flaskr/templates/finalReport/graph.html
+++ b/flaskr/templates/finalReport/graph.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}USER MENU{% endblock %}</h1>
+  <h1>{% block title %}Results{% endblock %}</h1>
 
 {% endblock %}
 
