--- a/flaskr/templates/test_user_index/adminOptions.html
+++ b/flaskr/templates/test_user_index/adminOptions.html
@@ -14,7 +14,7 @@
     <h4>Select from the following options</h4>
 
 
-
+    <li><a href="{{ url_for('test_user_index.adminPageInfect') }}">Mark a user infected</a>
     <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
 <!---
  <form method="post">
