I fixed the chnage rate so it actually works, I fixed a spelling mistake and made the nodes auto adjust dependong on size.

--- a/flaskr/templates/finalReport/newGraph.html
+++ b/flaskr/templates/finalReport/newGraph.html
@@ -9,7 +9,7 @@
 
     {% if g.user %}
     <h2>{{ g.user['firstName'] }}</h2>
-    <h2>You haven't has contact with anyone infected with COVID19. </h2>
+    <h2>You haven't had contact with anyone infected with COVID19. </h2>
 
 
     <img src="{{url_for('static', filename='checkMark.jpeg')}}" align="middle" />
