updated admin control panel for clarity

--- a/flaskr/templates/test_user_index/adminOptions.html
+++ b/flaskr/templates/test_user_index/adminOptions.html
@@ -15,7 +15,7 @@
 
 
     <li><a href="{{ url_for('test_user_index.adminPageInfect') }}">Mark a user infected</a>
-    <li><a href="{{ url_for('test_user_index.adminLocProb') }}">Change a location's Probability</a>
+    <li><a href="{{ url_for('test_user_index.adminLocProb') }}">Change the transmission probability for a location</a>
     <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
 
   {% endif %}
